# consvc-shepherd

./: .dockerignore  .env.example  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  UserGuide.html  book.toml  docker-compose.test-django.yml  docker-compose.test-js.yml  docker-compose.test-react.yml  docker-compose.test.yml  docker-compose.yml  foo.txt  index.html  intro.html  manage.py  metrics.html  package-lock.json  package.json  print.html  pyproject.toml  quickStart.html  recoveryScript.html  requirements.in  requirements.txt  ruff.toml  searchindex.js  searchindex.json  setup.cfg  sync_boostr_data.py  sync_boostr_deals_to_shepherd.py  version.json
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: build_and_push_to_gar.yml  dev_shepherd.yaml
ad-ops-dashboard/: .env.example  Dockerfile  README.md  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
ad-ops-dashboard/src/: App.tsx  instrument.tsx  routes.tsx  server.ts  setupTests.ts  types.tsx  vite-env.d.ts
adr/: 0000-metrics-client-for-shepherd.html
api/: serializers.py  urls.py  views.py
consvc_shepherd/: __init__.py  admin.py  asgi.py  forms.py  models.py  preview.py  schema.sql  settings.py  storage.py  urls.py  utils.py  version.py  views.py  wsgi.py
consvc_shepherd/api/: filters.py  serializers.py  urls.py  views.py
consvc_shepherd/management/: media_plan_models.py
consvc_shepherd/migrations/: 0001_initial.py  0001_squashed_0004_advertiserurl_geo.py  0002_alter_advertiserurl_domain.py  0002_alter_advertiserurl_domain_squashed_0003_alter_advertiserurl_domain.py  0002_alter_partner_click_hosts_alter_partner_click_hosts_and_more.py  0002_remove_advertiserurl_exact_and_more.py  0003_alter_advertiserurl_domain.py  0003_delete_partneradurl.py  0003_settingssnapshot_launched_date_and_more.py  0003_settingssnapshot_settings_type.py  0004_advertiserurl_click_hosts_and_more.py  0004_remove_advertiserurl_advertiser_and_more.py  0005_allocationsetting_partnerallocation.py  0006_rename_allocationposition_partnerallocation_allocation_position.py  0007_alter_partnerallocation_partner_and_more.py  0007_alter_settingssnapshot_created_by_and_more.py  0008_alter_partnerallocation_percentage.py  0008_boostrdeal_boostrdealsproduct_boostrproduct.py  0008_boostrdeal_boostrproduct.py  0008_boostrdeal_boostrproduct_boostrdealproduct_and_more.py  0008_boostrproduct_boostrdeal.py  0008_revenueoverview_adopscampaignmanager_adproduct_and_more.py  0009_alter_boostrproduct_campaign_type.py  0009_auto_20240805_2019.py  0009_revenue_overview.py  0009_revenue_overview_view.py  0009_revenueoverview_adproduct_country_and_more.py  0010_add_boostsyncstatus_table.py  0010_auto_20240805_2019.py  0010_boostrdealmediaplan_boostrdealmediaplanlineitem.py  0010_boostrdealproduct_quantity_boostrdealproduct_rate_and_more.py  0010_boostrproduct_country.py  0010_boostrsyncstatus.py  0010_revenueoverview_countries_adsinventoryforecast.py  0010_revenueoverview_countries_and_more.py  0011_adopscampaignmanager.py  0011_alter_boostrproduct_country.py  0011_alter_boostrsyncstatus_synced_on.py  0011_auto_20240802_1624.py  0011_boostrdealproduct_quantity_boostrdealproduct_rate_and_more.py  (+74 more)
consvc_shepherd/models/: __init__.py  contile.py  shepherd.py
consvc_shepherd/templatetags/: __init__.py  sponsored_by.py
consvc_shepherd/tests/: __init__.py  factories.py  test_admin.py  test_api_views.py  test_database_views.py  test_fetch_bq_data.py  test_forms.py  test_models.py  test_models_contile.py  test_preview.py  test_sync_boostr.py  test_sync_boostr_mock_responses.py  test_sync_boostr_mocks.py  test_sync_bq_data.py  test_version.py  test_views.py  view_definitions.json
contile/: __init__.py  admin.py  models.py  tests.py
contile/migrations/: 0001_initial.py  0002_partner_is_active_partner_last_approved_by_and_more.py  0003_alter_advertiserurl_matching.py  0004_remove_advertiserurl_position.py  0005_remove_partner_click_hosts_and_more.py  __init__.py
contile/tests/: __init__.py  test_admin.py  test_models.py
dashboard/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx  queries.tsx  routes.tsx  types.tsx
dashboard_api/: apps.py  serializers.py  urls.py  views.py
dashboard_api/migrations/: 0001_initial.py
docs/: SUMMARY.md  UserGuide.md  intro.md  metrics.md  quickStart.md  testing.md
docs/adr/: 0000-metrics-client-for-shepherd.md
docs/operations/: addAdvertiserPaths.md  addAdvertisers.md  addPartners.md  addPartnersAndAdvertisers.md  auth.md  createPublishSnapshots.md  createSovAllocations.md  recoveryScript.md  seed.md  syncBigQueryData.md  syncBigQueryDataCron.md  syncBoostrData.md  syncBoostrDataCron.md  syncBoostrDataScript.md
openidc/: __init__.py  middleware.py  test_middleware.py
operations/: addAdvertiserPaths.html  addAdvertisers.html  addPartners.html  addPartnersAndAdvertisers.html  auth.html  createPublishSnapshots.html  createSovAllocations.html  index.html  recoveryScript.html  rollback.html  syncBigQueryData.html  syncBigQueryDataCron.html  syncBoostrData.html  syncBoostrDataCron.html
schema/: allocation.schema.json  filter.schema.json  schema.dbml  shepherd.schema.json  test_schema.py
scripts/: README.md  recover.py
stubs/environ/: __init__.pyi
stubs/polymorphic/: admin.pyi
templates/: base.html  index.html  preview.html
templates/admin/: campaign_summary.html  change_form.html  csv_upload.html
(+65 files in other folders)
